samples/_failures_safe/1761087539_900d61_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_31ff790b.c: In function ‘print_sample_entries’:
./samples/SAFE/__tmp_31ff790b.c:131:16: error: missing terminating " character
  131 |         printf("[%s] %s: %s\n
      |                ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_31ff790b.c:131:9: error: expected expression at end of input
  131 |         printf("[%s] %s: %s\n
      |         ^~~~~~
./samples/SAFE/__tmp_31ff790b.c:131:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_31ff790b.c:131:9: error: expected declaration or statement at end of input
